--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ECommerceApp">
-        <activity android:name=".ProductDetail"></activity>
-        <activity android:name=".product_list" />
+        <activity android:name=".View.ProductDetailActivity"></activity>
+        <activity android:name=".View.ProductListActivity" />
         <activity android:name=".View.ShoppingCartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
