--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -15,8 +15,6 @@
         android:theme="@style/Theme.ECommerceApp">
         <activity android:name=".View.ProductDetailActivity"></activity>
         <activity android:name=".View.ProductListActivity" />
-        <activity android:name=".View.ShoppingCartActivity">
-        <android:theme="@style/Theme.ECommerceApp" >
         <activity android:name=".View.CheckOutActivity" >
         </activity>
         <activity android:name=".View.ShoppingCartActivity" >
@@ -26,21 +24,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"/>
 
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
 
-
-        <activity android:name=".MainActivity" >
-
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
-        </activity>
     </application>
 
 </manifest>
