! finish checkout and shopping cart

--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -17,7 +17,11 @@
         <activity android:name=".View.ProductListActivity" />
 
         <activity android:name=".View.ShoppingCartActivity">
+                        <intent-filter>
+                            <action android:name="android.intent.action.MAIN" />
 
+                            <category android:name="android.intent.category.LAUNCHER" />
+                        </intent-filter>
         </activity>
 
         <activity android:name=".View.CheckOutActivity" >
@@ -31,12 +35,12 @@
 
         <activity android:name=".MainActivity" >
 
-             <intent-filter>
-             <action android:name="android.intent.action.MAIN" />
+<!--             <intent-filter>-->
+<!--             <action android:name="android.intent.action.MAIN" />-->
 
 
-             <category android:name="android.intent.category.LAUNCHER" />
-             </intent-filter>
+<!--             <category android:name="android.intent.category.LAUNCHER" />-->
+<!--             </intent-filter>-->
         </activity>
 
     </application>
