--- a/src/app/build.gradle
+++ b/src/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'realm-android'
+    id "androidx.navigation.safeargs"
 }
 
 android {
@@ -56,5 +57,6 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
 
 }
