--- a/src/build.gradle
+++ b/src/build.gradle
@@ -9,6 +9,9 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.2.0"
         classpath "io.realm:realm-gradle-plugin:10.4.0"
 
+        def nav_version = "2.3.5"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
