! hot fix manifest

--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -14,19 +14,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ECommerceApp">
 
-        <activity android:name=".View.AdminPageActivity">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
+        <activity android:name=".MainActivity">
 
-        <activity android:name=".View.SignUpActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
         </activity>
-        <activity android:name=".View.LoginActivity"></activity>
+
+        <activity android:name=".View.AdminPageActivity">
+        </activity>
+        <activity android:name=".View.SignUpActivity">
+        </activity>
+        <activity android:name=".View.LoginActivity">
+        </activity>
         <activity android:name=".View.ProductDetailActivity" />
         <activity android:name=".View.ProductListActivity" />
 
@@ -35,48 +37,11 @@
         </activity>
         <activity android:name=".View.CheckOutActivity">
         </activity>
-        <activity android:name=".MainActivity">
-
-             <intent-filter>
-             <action android:name="android.intent.action.MAIN" />
-
-
-             <category android:name="android.intent.category.LAUNCHER" />
-             </intent-filter>
-
-<!--                        <intent-filter>-->
-<!--                            <action android:name="android.intent.action.MAIN" />-->
-
-<!--                            <category android:name="android.intent.category.LAUNCHER" />-->
-<!--                        </intent-filter>-->
-        </activity>
-
-        <activity android:name=".View.CheckOutActivity" >
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-        </activity>
-
-
-        <activity android:name=".MainActivity" >
-
-<!--             <intent-filter>-->
-<!--             <action android:name="android.intent.action.MAIN" />-->
-
-
-<!--             <category android:name="android.intent.category.LAUNCHER" />-->
-<!--             </intent-filter>-->
-
-        </activity>
 
         <activity android:name=".View.UserPageActivity">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
+        </activity>
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+        <activity android:name=".View.ForgetPassActivity">
         </activity>
 
     </application>
